compiler/tests/dfence-checker/success/mmx.jazz
fn spill_msf(reg u32 msf) -> #msf reg u32 {
    #mmx reg u32 _msf;
    _msf = #mov_msf(msf);
    msf = #mov_msf(_msf);
    return msf;
}

fn return_msf(reg u32 msf) -> #msf #mmx reg u32 {
    #mmx reg u32 _msf;
    _msf = #mov_msf(msf);
    return _msf;
}

fn take_msf(#mmx reg u32 _msf) -> #msf reg u32 {
    reg u32 msf;
    msf = #mov_msf(_msf);
    return msf;
}

export
fn init_mmx_msf() -> reg u32 {
    reg u32 msf;
    msf = #init_msf();
    msf = spill_msf(msf);
    return msf;
}

fn protect_mmx(#mmx reg u32 x) -> #mmx reg u32 {
    x = #dfence(x);
    return x;
}
