compiler/tests/dfence-checker/fail/spill.jazz
fn spill2(
    #public reg u64 pub,
    #secret reg u64 sec
) ->
    #public reg u64
{
    () = #spill(pub, sec);
    [pub] = sec;
    () = #unspill(pub, sec);
    [pub] = sec;
    return pub;
}
